feat/enviroment TSOA
