# src/dist/swagger.json
@@ -49,7 +49,6 @@
 					}
 				},
 				"required": [
-					"id",
 					"name"
 				],
 				"type": "object",
@@ -66,7 +65,6 @@
 					}
 				},
 				"required": [
-					"id",
 					"name"
 				],
 				"type": "object",
@@ -532,14 +530,7 @@
 				"operationId": "CreateDegree",
 				"responses": {
 					"201": {
-						"description": "Created",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Degree"
-								}
-							}
-						}
+						"description": "Created"
 					}
 				},
 				"tags": [
@@ -973,7 +964,11 @@
 				"tags": [
 					"Auth"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": []
 			}
 		}
